objects/tfn_Onground_Work__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Completion_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Cost_Per_Unit__c</fullName>
        <label>Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tfn_Coverage_Area_ha__c</fullName>
        <label>Coverage Area (ha)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Details_of_Works_Requested__c</fullName>
        <label>Details of Works Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Ecological_Event_Type__c</fullName>
        <label>Ecological Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fire</fullName>
                    <color>#FFFFFF</color>
                    <label>Fire</label>
                </value>
                <value>
                    <fullName>Flood</fullName>
                    <color>#FFFFFF</color>
                    <label>Flood</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Onground Works</relationshipLabel>
        <relationshipName>Onground_Works</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tfn_Number_of_Units_per_Activity__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_OGW_Funding_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OGW Funding Project</label>
        <referenceTo>tfn_Funding_Project__c</referenceTo>
        <relationshipLabel>Onground Works</relationshipLabel>
        <relationshipName>Onground_Works</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Offset_Stewardship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a way to relate any &quot;Offset Stewardship&quot; mandated activities to that specific Offset Stewardship record</inlineHelpText>
        <label>Offset Stewardship</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There is Offset Stewardship on this interest. If this is an offset covenant please create Offset Stewardship entry</errorMessage>
            <filterItems>
                <field>$Source.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>loc03__Monitoring__c.loc03__Easement_Fee_Title__c</valueField>
            </filterItems>
            <filterItems>
                <field>loc03__Monitoring__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Offset Stewardship</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loc03__Monitoring__c</referenceTo>
        <relationshipLabel>Onground Works</relationshipLabel>
        <relationshipName>Onground_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Payment_Conditions__c</fullName>
        <label>Payment Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Planned_Management_Outcome__c</fullName>
        <label>Planned Management Outcome</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Total_Costs_Per_Activity__c</fullName>
        <description>tfn_Cost_Per_Unit__c  *  tfn_Number_of_Units_per_Activity__c</description>
        <formula>tfn_Cost_Per_Unit__c  *  tfn_Number_of_Units_per_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Costs Per Unit x Number Of Units Per Activity</inlineHelpText>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tfn_Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hectare</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Kilometer</fullName>
                </value>
                <value>
                    <fullName>Hectares</fullName>
                    <isActive>false</isActive>
                    <label>Hectares</label>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                    <isActive>false</isActive>
                    <label>Kilometers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Work_Type__c</fullName>
        <label>Work Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Install</fullName>
                    <color>#FFFFFF</color>
                    <label>Install</label>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                    <color>#FFFFFF</color>
                    <label>Maintain</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                    <color>#FFFFFF</color>
                    <label>Modify</label>
                </value>
                <value>
                    <fullName>Remove</fullName>
                    <color>#FFFFFF</color>
                    <label>Remove</label>
                </value>
                <value>
                    <fullName>Replace</fullName>
                    <color>#FFFFFF</color>
                    <label>Replace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Works_Description__c</fullName>
        <label>Works Description</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Changed Grazing Regime</fullName>
                    <color>#FFFFFF</color>
                    <label>Changed Grazing Regime</label>
                </value>
                <value>
                    <fullName>Fencing</fullName>
                    <color>#FFFFFF</color>
                    <label>Fencing</label>
                </value>
                <value>
                    <fullName>Feral Animal Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Feral Animal Control</label>
                </value>
                <value>
                    <fullName>Feral Herbivore  Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Feral Herbivore  Control</label>
                </value>
                <value>
                    <fullName>Feral Predator Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Feral Predator Control</label>
                </value>
                <value>
                    <fullName>Fire Regime Implemented</fullName>
                    <color>#FFFFFF</color>
                    <label>Fire Regime Implemented</label>
                </value>
                <value>
                    <fullName>Follow up Weed Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Follow up Weed Control</label>
                </value>
                <value>
                    <fullName>Habitat Addition</fullName>
                    <color>#FFFFFF</color>
                    <label>Habitat Addition</label>
                </value>
                <value>
                    <fullName>Over-abundant Wildlife Management Actions</fullName>
                    <color>#FFFFFF</color>
                    <label>Over-abundant Wildlife Management Actions</label>
                </value>
                <value>
                    <fullName>Revegetation</fullName>
                    <color>#FFFFFF</color>
                    <label>Revegetation</label>
                </value>
                <value>
                    <fullName>Waterway Storage (i.e. Construction of new wetland)</fullName>
                    <color>#FFFFFF</color>
                    <label>Waterway Storage (i.e. Construction of new wetland)</label>
                </value>
                <value>
                    <fullName>Waterway Structure (e.g. Levee, regulator)</fullName>
                    <color>#FFFFFF</color>
                    <label>Waterway Structure (e.g. Levee, regulator)</label>
                </value>
                <value>
                    <fullName>Weed Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Weed Control</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Works_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Works Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onground Work</relationshipLabel>
        <relationshipName>tfn_Works_Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Works_Title__c</fullName>
        <label>Works Title</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural</fullName>
                    <color>#FFFFFF</color>
                    <label>Agricultural</label>
                </value>
                <value>
                    <fullName>Bollard Fence</fullName>
                    <color>#FFFFFF</color>
                    <label>Bollard Fence</label>
                </value>
                <value>
                    <fullName>Channel</fullName>
                    <color>#FFFFFF</color>
                    <label>Channel</label>
                </value>
                <value>
                    <fullName>Channel Drain</fullName>
                    <color>#FFFFFF</color>
                    <label>Channel Drain</label>
                </value>
                <value>
                    <fullName>Constructed Wetland</fullName>
                    <color>#FFFFFF</color>
                    <label>Constructed Wetland</label>
                </value>
                <value>
                    <fullName>Dam</fullName>
                    <color>#FFFFFF</color>
                    <label>Dam</label>
                </value>
                <value>
                    <fullName>Ecological</fullName>
                    <color>#FFFFFF</color>
                    <label>Ecological</label>
                </value>
                <value>
                    <fullName>Estuarine</fullName>
                    <color>#FFFFFF</color>
                    <label>Estuarine</label>
                </value>
                <value>
                    <fullName>Fence</fullName>
                    <color>#FFFFFF</color>
                    <label>Fence</label>
                </value>
                <value>
                    <fullName>Fire</fullName>
                    <color>#FFFFFF</color>
                    <label>Fire</label>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                    <color>#FFFFFF</color>
                    <label>Grazing</label>
                </value>
                <value>
                    <fullName>Inland Aquatic</fullName>
                    <color>#FFFFFF</color>
                    <label>Inland Aquatic</label>
                </value>
                <value>
                    <fullName>Man-made Ground Feature</fullName>
                    <color>#FFFFFF</color>
                    <label>Man-made Ground Feature</label>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                    <color>#FFFFFF</color>
                    <label>Mixed</label>
                </value>
                <value>
                    <fullName>Native Indigenous</fullName>
                    <color>#FFFFFF</color>
                    <label>Native Indigenous</label>
                </value>
                <value>
                    <fullName>Native Non-indigenous</fullName>
                    <color>#FFFFFF</color>
                    <label>Native Non-indigenous</label>
                </value>
                <value>
                    <fullName>Natural Ground Feature</fullName>
                    <color>#FFFFFF</color>
                    <label>Natural Ground Feature</label>
                </value>
                <value>
                    <fullName>Nest Box</fullName>
                    <color>#FFFFFF</color>
                    <label>Nest Box</label>
                </value>
                <value>
                    <fullName>Non-woody</fullName>
                    <color>#FFFFFF</color>
                    <label>Non-woody</label>
                </value>
                <value>
                    <fullName>Over-abundant Wildlife Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Over-abundant Wildlife Control</label>
                </value>
                <value>
                    <fullName>Pest Animal Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Pest Animal Control</label>
                </value>
                <value>
                    <fullName>Riparian</fullName>
                    <color>#FFFFFF</color>
                    <label>Riparian</label>
                </value>
                <value>
                    <fullName>Tank</fullName>
                    <color>#FFFFFF</color>
                    <label>Tank</label>
                </value>
                <value>
                    <fullName>Terrestrial</fullName>
                    <color>#FFFFFF</color>
                    <label>Terrestrial</label>
                </value>
                <value>
                    <fullName>Terrestrial Feature</fullName>
                    <color>#FFFFFF</color>
                    <label>Terrestrial Feature</label>
                </value>
                <value>
                    <fullName>Trough</fullName>
                    <color>#FFFFFF</color>
                    <label>Trough</label>
                </value>
                <value>
                    <fullName>Vegetation</fullName>
                    <color>#FFFFFF</color>
                    <label>Vegetation</label>
                </value>
                <value>
                    <fullName>Water Storage</fullName>
                    <color>#FFFFFF</color>
                    <label>Water Storage</label>
                </value>
                <value>
                    <fullName>Weed Control</fullName>
                    <color>#FFFFFF</color>
                    <label>Weed Control</label>
                </value>
                <value>
                    <fullName>Woody</fullName>
                    <color>#FFFFFF</color>
                    <label>Woody</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_gal_Legacy_File_Num_Ref__c</fullName>
        <formula>tfn_Interest__r.tfn_Legacy_File_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy File Num Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_gal_Primary_Contact__c</fullName>
        <formula>tfn_Interest__r.loc03__Primary_Property_Contact__r.FirstName  &amp;  tfn_Interest__r.loc03__Primary_Property_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Primary Contact</label>
        <type>Text</type>
    </fields>
    <label>Onground Work</label>
    <nameField>
        <displayFormat>OW-{00000}</displayFormat>
        <label>Onground Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onground Works</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>